fix: several issues and improve UX, few new features add and enhanced existing ones

--- a/popup.html
+++ b/popup.html
@@ -36,6 +36,9 @@
           <input type="checkbox" value="adult" /> Adult Content
         </label>
       </div>
+      <div id="whitelist-notice" class="info-message" style="display: none">
+        &#128221; Whitelist mode is active. Category blocking is disabled.
+      </div>
 
       <label>Custom URLs to Block:</label>
       <div id="custom-urls">
