fix: incognito mode issue

--- a/popup.html
+++ b/popup.html
@@ -140,6 +140,35 @@
       </div>
 
       <button id="start">Start Focus</button>
+
+      <!-- Help section for incognito mode -->
+      <div
+        id="help-section"
+        style="margin-top: 20px; padding-top: 15px; border-top: 1px solid #eee"
+      >
+        <details>
+          <summary
+            style="
+              cursor: pointer;
+              font-size: 12px;
+              color: #666;
+              margin-bottom: 10px;
+            "
+          >
+            ❓ Need help with incognito mode?
+          </summary>
+          <div style="font-size: 11px; color: #666; line-height: 1.4">
+            <p><strong>To use FocusedMind in incognito windows:</strong></p>
+            <ol style="margin: 5px 0; padding-left: 20px">
+              <li>Go to <code>chrome://extensions/</code></li>
+              <li>Find "FocusedMind" extension</li>
+              <li>Click "Details"</li>
+              <li>Toggle "Allow in incognito" to ON</li>
+            </ol>
+            <p>This is a Chrome security requirement for all extensions.</p>
+          </div>
+        </details>
+      </div>
     </div>
 
     <div id="active-view" style="display: none">
